# arm-m0-emulator

./: CMakeLists.txt  README.md  main.cpp
cpu/: cpu.cpp  cpu.h  mmu.cpp  mmu.h  registers.h  util.h
instructions/: codes.h  conditions.h  encoder.cpp  encoder.h  instructions.h
pheripherals/: peripheral.h
tests/: test-cpu.cpp  test-mmu-test.cpp
